test/tests/PostconditionAtPreInAtPre.expected
PostconditionAtPreInAtPre.panda:2:16: error: @pre is not legal within @pre
1 error
