test/tests/PostconditionAtPreInAtPre.panda
class PostconditionAtPreInAtPre {
    @post(@pre(@pre(true)))
    method test(x:Int):Int {
        return x * x
    }
}
